--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
-<h1><%= @category.name %></h1>
-<% @category.posts.each do |post| %>
+<h1><%= @user.name %></h1>
+<% @user.posts.each do |post| %>
   <h3><%= link_to post.title, post_path(post) %></h3>
 <% end %>
 
