--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,6 +13,6 @@
   <%= f.label "Content" %>
   <%= f.text_field :content %>
   <%= f.collection_select :user_id, User.all, :id, :name %>
-  <%= f.hidden_field :post_id %>
+  <%= f.hidden_field :post_id, value: @post.id %>
   <%= f.submit %>
 <% end %>
