--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,7 +12,7 @@
 <%= form_for @post.comments.build do |f| %>
   <%= f.label "Content" %>
   <%= f.text_field :content %>
-  <%= f.collection_select :user_id, User.all, :id, :name %>
+  <%= f.collection_select :user_id, User.all, :id, :username %>
   <%= f.hidden_field :post_id, value: @post.id %>
   <%= f.submit %>
 <% end %>
