--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,8 +13,8 @@
   <%= f.label "Content" %>
   <%= f.text_field :content %>
   <%= f.collection_select :user_id, User.all, :id, :username %>
-  <%= f.fields_for :categories, @post.categories.build do |categories_fields| %>
-    <%= categories_fields.text_field :name %>
+  <%= f.fields_for :users, @post.users.build do |users_fields| %>
+    <%= users_fields.text_field :username %>
   <% end %>
   <%= f.hidden_field :post_id, value: @post.id %>
   <%= f.submit %>
