--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,7 +13,7 @@
   <%= f.label "Content" %>
   <%= f.text_field :content %>
   <%= f.collection_select :user_id, User.all, :id, :username %>
-  <%= f.fields_for :users, @post.comments.build.build_user do |user_fields| %>
+  <%= f.fields_for :user, @post.comments.build.build_user do |user_fields| %>
     <%= user_fields.text_field :username %>
   <% end %>
   <%= f.hidden_field :post_id, value: @post.id %>
