--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,7 +9,7 @@
 <% end %>
 
 <h3>Add a Comment</h3>
-<%= form_for @post.comments.build do |f| %>
+<%= form_for @comment do |f| %>
   <%= f.label "Content" %>
   <%= f.text_field :content %>
   <%= f.collection_select :user_id, User.all, :id, :username %>
