--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,11 +9,11 @@
 <% end %>
 
 <h3>Add a Comment</h3>
-<%= form_for @comment do |f| %>
+<%= form_for @post.comments.build do |f| %>
   <%= f.label "Content" %>
   <%= f.text_field :content %>
   <%= f.collection_select :user_id, User.all, :id, :username %>
-  <%= f.fields_for :user, @comment.build_user do |user_fields| %>
+  <%= f.fields_for :user, @post.comments.build.build_user do |user_fields| %>
     <%= user_fields.text_field :username %>
   <% end %>
   <%= f.hidden_field :post_id, value: @post.id %>
