--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,7 +17,7 @@
 <%= form_for @post.comments.build do |f| %>
   <%= f.label "Content" %>
   <%= f.text_field :content %>
-  <%= f.collection_select :user_id, User.all, :id, :username %>
+  <%= f.collection_select :user_id, User.all, :id, :username, include_blank: 'Choose a User' %>
   <%= f.fields_for :user, @post.comments.last.build_user do |user_fields| %>
     <%= user_fields.text_field :username %>
   <% end %>
