--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,4 @@
-
+<h1><%= @user.username %></h1>
+<% @user.posts.each do |post| %>
+  <h3><%= link_to post.title, post_path(post) %></h3>
+<% end %>
